<resources>

    <!--    app specific-->
    <string name="app_name" translatable="false">CoffeeBase</string>
    <string name="title_activity_navigation_drawer" translatable="false">navigationDrawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_brew_card_view" translatable="false">BrewCardView</string>
    <string name="title_activity_brew" translatable="false">BrewActivity</string>
    <string name="title_activity_edit_brew" translatable="false">EditBrewActivity</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="server_client_id" translatable="false">
        197200968254-uftl0ec1vual1ikvru1qtk2rialvbcji.apps.googleusercontent.com
    </string>

    <!-- about-->
    <string name="about_content" formatted="false">
        &lt;h2>About CoffeeBase&lt;/h2>
        &lt;p>
        CoffeeBase is a pure hobby project. I developed it for learning purposes and because I needed to get rid of all
        those empty coffee bags with notes and ratings :)
        &lt;/p>

        &lt;h2>Updates&lt;/h2>
        &lt;p>
        I am working on this project after my working hours, in my private time. I have a few more ideas on what else to
        add, but I can not promise periodic updates.
        Additionally, I am very lazy, so please understand :) If you have any cool ideas for this app, please contact me
        via email!
        &lt;/p>

        &lt;h2>Monetization&lt;/h2>
        &lt;p>
        This app will always be free, and you will never see any ads here. However, keeping the app alive on the Play
        Store, marketing, web service,
        and database all have their costs. That\'s why if you want, you can subscribe to pay $2 or 5$ a month.
        It\'s the cost of one coffee, and you will help me a lot! There are no benefits to gain by doing so (yet), and
        it\'s completely optional.
        Subscription is available in account section.
        &lt;/p>

        &lt;p>&lt;b>&lt;font size=\"16\">Developed by NCode&lt;/font>&lt;/b>&lt;/p>
    </string>

    <!--    translatable-->
    <string name="coffee_name">Coffee Name</string>
    <string name="roaster">Roaster</string>
    <string name="roast_profile">Roast Profile</string>
    <string name="continent">Continent</string>
    <string name="origin">Origin</string>
    <string name="region">Region</string>
    <string name="farm">Farm</string>
    <string name="crop_height">Crop Height</string>
    <string name="processing">Processing</string>
    <string name="sca_score">SCA Score</string>
    <string name="coffee">Coffee</string>
    <string name="change_image">Change Image</string>
    <string name="rating">Rating</string>
    <string name="tag">"Tag "</string>
    <string name="save">Save</string>
    <string name="my_coffeebase">My CoffeeBase</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="username">Username</string>
    <string name="add_coffee">Add Coffee</string>
    <string name="about">About</string>
    <string name="user">User</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="edit_coffee">Edit Coffee</string>
    <string name="delete_coffee">Delete Coffee</string>
    <string name="search">Search</string>
    <string name="welcome_back">Welcome back</string>
    <string name="successfully_logged_out">Successfully logged out!</string>
    <string name="login_failed">Login failed</string>
    <string name="error">Error!</string>
    <string name="server_unavailable_retrying">Server is unavailable. Trying again…</string>
    <string name="image_not_saved">Image not saved!</string>
    <string name="delete_coffee_question">Delete this coffee?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="constraint_coffee_name_not_empty">Name cannot be empty</string>
    <string name="constraint_crop_height">Crop height must be between 0 and 8849</string>
    <string name="constraint_sca_rating">SCA Rating must be between 0 and 100</string>
    <string name="constraint_tag_name_not_empty">Tag name cannot be empty</string>
    <string name="exit_app">Exit Application</string>
    <string name="dismiss">Dismiss</string>
    <string name="developed_by_ncode">Developed by NCode</string>
    <string name="signed_in_with_google">Signed in with Google</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="south_america">South America</string>
    <string name="light">Light</string>
    <string name="omniroast">Omniroast</string>
    <string name="dark">Dark</string>
    <string name="subscription">Subscription</string>
    <string name="thank_you">Thank You!!!</string>
    <string name="subscription1">Monthly - 1.99$</string>
    <string name="subscription2">Monthly - 4.99$</string>
    <string name="coffee_info">INFO</string>
    <string name="brews">BREWS</string>
    <string name="brew">Brew</string>
    <string name="add_brew_recipe">Add brew recipe</string>
    <string name="delete_brew">Delete brew</string>
    <string name="brew_name">Brew Name</string>
    <string name="method">Method</string>
    <string name="water">Water</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="comment" translatable="false">Comment</string>
    <string name="water_amount">Water Amount</string>
    <string name="water_temp">Water temperature</string>
    <string name="coffee_weight">Coffee weight</string>
    <string name="grinder_setting">Grinder setting</string>
    <string name="time">Time</string>
    <string name="how_was_it">How was it?</string>
    <string name="detach_brew_question">Do you want to remove brew from this coffee?\nIt will still be available on other coffees.</string>
    <string name="gram">grams</string>
    <string name="click">clicks</string>
    <string name="mililiters">ml</string>
    <string name="minutes">minutes</string>
    <string name="aeropress">aeropress</string>
    <string name="auto_drip">pour-over machine</string>
    <string name="chemex">chemex</string>
    <string name="espresso">espresso machine</string>
    <string name="french_press">french press</string>
    <string name="mokka_pot">mokka pot</string>
    <string name="v60">V60</string>
    <string name="constraint_brew_name_not_empty">Brew name cannot be empty</string>
    <string name="coffee_weight_in_grams" translatable="false">Coffee weight (grams)</string>
    <string name="grinder_setting_in_clicks">Grinder setting (clicks)</string>
    <string name="water_amount_in_ml">Water amount (ml)</string>
    <string name="water_temp_in_celsius">Water temperature (Celsius)</string>
    <string name="constraint_coffee_weight">Coffee weight can be between 1 to 250</string>
    <string name="constraint_grinder_setting">Grinder setting can be between 1 to 100</string>
    <string name="constraint_water_amount">Water amount can be between 1 to 5000</string>
    <string name="constraint_water_temp">Water temperature can be between 1 to 100</string>
    <string name="seconds">seconds</string>
    <string name="pour">pour</string>
    <string name="add_pour">Add Pour</string>
    <string name="water_ml_in_pour">Mililiters of water in pour</string>
    <string name="pour_time_seconds">Pour time in seconds</string>
    <string name="brew_created">New brew recipe has been created!</string>
    <string name="add_brew_to_coffee">Add brew recipe to coffee</string>
    <string name="constraint_pour_water_amount">Water amount can be between 1 to 1500</string>
    <string name="constraint_pourover_time">Time can be between 1 to 600</string>
    <string name="delete_account_question">This action will remove all your data!\nAre you sure you want to proceed? </string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="languageCode">Language</string>
    <string name="UI">UI</string>
    <string name="other">Other</string>
    <string name="purchased">purchased</string>
    <string name="save_settings">Save Settings</string>
    <string name="coffees_in_row">My coffeebase coffees in row</string>
    <string name="search_by_anything">search by anything</string>
    <string name="sort">sort</string>
    <string name="do_filter">filter</string>
    <string name="sort_default">default</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>
    <string name="favorite">Favourite</string>
    <string name="apply_filters">Apply filters</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="unable_to_process_image">Application is not able to process image</string>
    <string name="access_to_images_not_granted_info">This feature requires adequate permissions.Please grant it from app settings.</string>


    <!-- error messages -->
    <string name="not_permitted_to_modify">User is not permitted to modify given item</string>
    <string name="coffee_not_found">Coffee with given ID not found</string>
    <string name="brew_not_found">Brew with given ID not found</string>
    <string name="tag_not_found">Tag with given id not found</string>
    <string name="no_matching_strategy_for_brew_action">Couldn\'t process given action</string>
    <string name="user_not_found">No user found with given user ID</string>
    <string name="file_unreadable">File is unreadable or does not exists</string>
    <string name="could_not_load_file">Could not load file</string>
    <string name="could_not_delete_file">Could not delete file</string>
    <string name="invalid_token">Token not valid or has expired</string>
    <string name="delete_failed">Delete operation failed</string>
    <string name="something_went_wrong">Something went wrong</string>

    <!--    dropdowns-->
    <string-array name="continents">
        <item>@string/continent</item>
        <item>@string/africa</item>
        <item>@string/asia</item>
        <item>@string/south_america</item>
    </string-array>

    <string-array name="roastProfiles">
        <item>@string/roast_profile</item>
        <item>@string/light</item>
        <item>@string/omniroast</item>
        <item>@string/dark</item>
    </string-array>

    <string-array name="coffees_in_row">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
