<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"
            tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarSettingsActivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/settings"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languageCode"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/languageTxt"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/languageSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/languageTxt"
            android:layout_marginTop="10dp"
            />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_begin="140dp"
            android:orientation="horizontal"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UI"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/UITxt"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="180dp"
            android:orientation="horizontal"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/otherTxt"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteAccountBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otherTxt"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete_account"
            android:textSize="13sp"
            android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
