<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"
            tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarCoffeeActivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/account"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/accountTxt"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountTxt"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/accountUserPictureImageCircle">

        <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

            <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_person"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/accountUserPictureImage"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="17sp"
            android:id="@+id/accountUserNameTxt"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/accountUserPictureImageCircle"
            app:layout_constraintStart_toEndOf="@+id/accountUserPictureImageCircle"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/signed_in_with_google"
            android:textSize="13sp"
            android:id="@+id/accountSignedWithTxt"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/accountUserNameTxt"
            app:layout_constraintStart_toEndOf="@id/accountUserPictureImageCircle"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/subscriptionTxt"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_begin="189dp"
            android:orientation="horizontal"/>

    <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subscriptionTxt"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:id="@+id/sub1Btn"
            android:text="@string/subscription1"/>

    <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub1Btn"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:id="@+id/sub2Btn"
            android:text="@string/subscription2"/>


</androidx.constraintlayout.widget.ConstraintLayout>
